# grid_of_life_deprecated

./: .gitignore  CMakeLists.txt  GridOfLife.sln
GridOfLife/: GridOfLife.cpp  GridOfLife.vcxproj  GridOfLife.vcxproj.filters
src/: gridoflife.cpp  gridoflife.h  internal_sdl_state.cpp
